Start integration of notification in user dashboard

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -12,21 +12,25 @@
         </a>
 
         <ul class="right dashboard-navlinks">
-          <li class="notification-badge">
-            <span>2 new</span>
-          </li>
-          <li>
-            <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Notifications">
+          <%= show_notification_count %>
+
+          <li class="notification-dropdown dropdown" data-activates="tasks">
+            <a href="#" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Notifications">
               <i class="material-icons">notifications_active</i>
             </a>
           </li>
+
           <% if current_user.user_type == "tasker" %>
             <li>
-              <a href="#" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Manage Tasks">
+              <a href="#" class="tooltipped" data-position="left" data-delay="50" data-tooltip="Manage Tasks">
                 <i class="material-icons">rate_review</i>
               </a>
           </li>
           <% end %>
+        </ul>
+
+        <ul id="tasks" class="dropdown-content">
+          <%= notification_dropdown_content %>
         </ul>
 
         <ul id="options" class="dropdown-content">
