Implement notifications index page for listing all taskee notifications and viewing specific notifications

--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -35,7 +35,7 @@ nav .nav-wrapper {
 
 // Dashboard index
 
-[class^="dashboard-"], .pages-search, .taskmanagement-new {
+[class^="dashboard-"], .pages-search, .taskmanagements-new, [class^="notifications-"] {
   .nav-wrapper {
     .dropdown {
       @include display(flex);
@@ -96,4 +96,44 @@ nav .nav-wrapper {
         border-radius: 100%;
       }
     }
+
+    // Notifications
+
+    .feed {
+      border-bottom: 1px solid #ccc;
+      padding: 5px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #f6f7f8;
+
+      &.viewed {
+        background-color: transparent;
+      }
+
+      &:last-child {
+        border: 0;
+      }
+
+      img {
+        width: em(30px);
+        height: em(30px);
+        border-radius: 100%;
+      }
+
+      .btn {
+        height: em(25px);
+        line-height: em(25px);
+      }
+    }
+
+    .full_notification_message {
+      padding: em(55px);
+
+      .actions {
+        @include display(flex);
+        @include justify-content(space-around);
+      }
+    }
+
 }
