--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -5,6 +5,7 @@
         <h3>Notifications</h3>
       </div>
 
+      <% if @notifiable.present?  %>
       <div class="notification-feed col s6">
         <% @notifiable.each do |object| %>
           <%= show_notifications(object) %>
@@ -15,6 +16,15 @@
         <p>Click on the view button to get more information about a task</p>
         <i class="material-icons">directions_bike</i>
       </div>
+      <% else  %>
+        <div class="col s6 full_notification_message center-align card-panel">
+          <p>No new notifications available</p>
+          <i class="material-icons">highlight_off</i>
+          <i class="material-icons">highlight_off</i>
+          <i class="material-icons">highlight_off</i>
+          <i class="material-icons">highlight_off</i>
+        </div>
+      <% end  %>
     </div>
   </section>
 </main>
