Implement a redirect for user who are not signed in who want to view other users' profile.
Why:

  Users on the platform need to be redirected to login when they search for taskees from the home page but they are not logged in.

This addresses the issue by:

  Including a flag to know if a searcher(user) is signed in or not when they are making a search.
  Saving a users state after making a search and they have clicked to view a taskers profile.
  Redirecting them to log in and displaying a message that they have to login to proceed.
  Taking them to the specific taskee's profile on login.
  Writing integration test for this feature.

[Finished #111955061]

--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -1,3 +1,4 @@
+<main>
 <section class="col m9 s12 offset-m3">
   <div class="row">
     <% if @taskees.nil? %>
@@ -7,16 +8,22 @@
     <% else %>
       <% @taskees.each do | taskee | %>
         <div class="taskee_card col m3 offset-m1 s6 left">
-          <p><%= image_tag taskee.image_url, { class: "responsive-img circle" }%></p>
+          <p><%= cl_image_tag taskee.image_url, { class: "responsive-img circle" }%></p>
           <p><%= taskee.firstname.concat(taskee.lastname).titleize %></p>
           <p><%= taskee.street_address + "," %></p>
           <p><%= (taskee.city + ", " + "#{taskee.state}" + ".").titleize %></p>
           <p>
-            <%= link_to "View", user_profile_path(taskee_id: taskee.id),
-                        class: "btn waves-effect" %>
+            <% unless current_user %>
+              <% session[:searched_taskee_id] = taskee.id %>
+              <%= link_to "View", signin_path(flash[:invalid] = "Login to continue"), class: "btn waves-effect searched-taskee" %>
+            <% else %>
+              <%= link_to "View", user_profile_path(taskee_id: taskee.id),
+                          class: "btn waves-effect searched-taskee" %>
+            <% end %>
           </p>
         </div>
       <% end %>
     <% end %>
   </div>
 </section>
+</main>
