Move model logic from controllers, refactor notifications_controller and taskmanagements_controlelr by reducing clutter and overly similar  methods

--- a/app/views/dashboard/profile_view.html.erb
+++ b/app/views/dashboard/profile_view.html.erb
@@ -10,8 +10,7 @@
         <li><%= @user.city %></li>
         <li><%= @user.state %></li>
         <% unless current_user.user_type == "taskee" %>
-          <% id = "WKDY#{@user.id}"%>
-          <%= link_to "ASSIGN TASK", assign_task_path(id: "#{id}"), class: "btn waves-effect" %>
+          <%= link_to "ASSIGN TASK", assign_task_path(obfuscate(id: @user.id)), class: "btn waves-effect" %>
         <% end %>
       </div>
     </ul>
