--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -17,7 +17,7 @@
               <% session[:searched_taskee_id] = taskee.id %>
               <%= link_to "View", signin_path(flash[:invalid] = "Login to continue"), class: "btn waves-effect searched-taskee" %>
             <% else %>
-              <%= link_to "View", user_profile_path(taskee_id: taskee.id),
+              <%= link_to "View", user_profile_path(obfuscate(taskee_id: taskee.id)),
                           class: "btn waves-effect searched-taskee" %>
             <% end %>
           </p>
