Implemented Email Notification Feature
Why:

Because we want the usersto be able to enable and disable email  notifications as needed

This addresses the need by:

Creating a toggle notification switch on the dashboard
Creating a send notification method to send notification
Creating an enable notification column in the users table

[Finished #107992170]

Email notification implemented for users.

--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -13,6 +13,24 @@
       <section class="col s12">
         <div class="user_info">
           <h3>Welcome <%= "#{current_user.firstname} #{current_user.lastname}" %> </h3>
+            <h5>enable mail notifications</h5>
+            <%= form_tag user_settings_path do %>
+                  <div class="switch" style="padding: 2em;">
+                <label>
+                  Off
+                  <% if current_user.enable_notifications %>
+                  <%= check_box_tag "notifications_enabled", "on", true %>
+                  <% else %>
+                  <%= check_box_tag "notifications_enabled", "off", false %>
+                  <% end %>
+                  <span class="lever"></span>
+                  On
+                </label>
+              </div>
+            <button id='notification' class="waves-effect waves-light btn"> save </button>
+          </div>
+            <% end %>
+
           <%= render "partials/search_for_taskee" if current_user.user_type == "tasker" %>
         </div>
       </section>
