implement location toggle update

--- a/app/views/pages/search_with_map.html.erb
+++ b/app/views/pages/search_with_map.html.erb
@@ -29,10 +29,10 @@
   };
 
   var position;
-
   var map;
   var marker;
-  var infowindow
+  var infowindow;
+  var contentString;
   function initMap(current_position) {
     position = {lat: current_position.coords.latitude, lng: current_position.coords.longitude};
       console.log(position)
@@ -40,6 +40,22 @@
       center: {lat: position.lat, lng: position.lng},
       zoom: 12
     });
+
+
+      contentString = '<div id="content">'+
+        '<div id="siteNotice">'+
+        '</div>'+
+        '<h3 id="firstHeading" class="firstHeading">Your Position</h3>'+
+        '<div id="bodyContent">'+
+        '<p><b>You</b>, are a tasker searching for someone to help you carry out tasks '+
+        'but instead of you to go use the search by like everyone else, '+
+        'You decide to explore and check out our map section. '+
+        'We appreciate the good gesture and we hope to serve you better. '+
+        'Kindly use the feedback section to give us appropriate information about '+
+        'any of the issues you face and we will gladly appreciate it  '+
+        '</p>'+
+        '</div>'+
+        '</div>';
 
     infowindow = new google.maps.InfoWindow({
       content: contentString
@@ -51,40 +67,23 @@
     title: 'Your current Location! '
     });
 
-  }
 
-  marker.addListener('click', function() {
+
+
+      marker.addListener('click', function() {
       infowindow.open(map, marker);
   });
 
 
-
-  var contentString = '<div id="content">'+
-    '<div id="siteNotice">'+
-    '</div>'+
-    '<h1 id="firstHeading" class="firstHeading">Uluru</h1>'+
-    '<div id="bodyContent">'+
-    '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-    'sandstone rock formation in the southern part of the '+
-    'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-    'south west of the nearest large town, Alice Springs; 450&#160;km '+
-    '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-    'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-    'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-    'Aboriginal people of the area. It has many springs, waterholes, '+
-    'rock caves and ancient paintings. Uluru is listed as a World '+
-    'Heritage Site.</p>'+
-    '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-    'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
-    '(last visited June 22, 2009).</p>'+
-    '</div>'+
-    '</div>';
+  }
 
 
 
-  marker.addListener('click', function() {
-    infowindow.open(map, marker);
-  });
+
+
+  // marker.addListener('click', function() {
+  //   infowindow.open(map, marker);
+  // });
 
   markers = []
   function addMarkers() {
@@ -113,6 +112,9 @@
     }
     markers = []
   }
+
+
+
   //     function showPosition(position) {
   //         handler = Gmaps.build('Google');
   //         handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
@@ -133,6 +135,13 @@
   //         });
   //      console.log ('this map has loaded')
   //     };
+
+
+
+
+
+
+
   </script>
 
   <script
