Implement Average review
Why:
This branch implements average review

This change addresses the need by:

Creating User decorator methods
Implementing arel table
Fixing HoundCI issues
Adding TaskManagements Controller and Views
Editing the dashboard page
Adding  TaskManagements Tests
Removing irrelevant spec folders
Fixing the search for task error

--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -24,12 +24,26 @@ nav .nav-wrapper {
 }
 
 .view_profile {
+  h3 {
+    padding-left: 1.2em !important;
+  }
   img {
     width: 15em;
     height: 15em;
   }
-  li {
-    font-size: 1.8em;
+  span {  
+    font-size: 1.1em;
+    padding-right: 0.2em;
+ }
+  h3, span {
+    font-weight: bold;
+ }
+}
+
+.user-reviews {
+  margin-top: 5em;
+    h4 {
+    font-weight: 400;
   }
 }
 
