--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -9,6 +9,18 @@
 
 <main>
   <section class="main container center-align">
+
+    <nav>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#!">First Sidebar Link</a></li>
+        <li><a href="#!">Second Sidebar Link</a></li>
+      </ul>
+      <ul id="slide-out" class="side-nav">
+        <li><a href="#!">First Sidebar Link</a></li>
+        <li><a href="#!">Second Sidebar Link</a></li>
+      </ul>
+      <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+    </nav>
     <div class="row">
       <section class="col s12">
         <div class="user_info">
@@ -18,11 +30,11 @@
                   <div class="switch" style="padding: 2em;">
                 <label>
                   Off
-                  <% if current_user.enable_notifications %>
-                  <%= check_box_tag "notifications_enabled", "on", true %>
-                  <% else %>
-                  <%= check_box_tag "notifications_enabled", "off", false %>
-                  <% end %>
+                  <% # if current_user.enable_notifications %>
+                  <%= #check_box_tag "notifications_enabled", "on", true %>
+                  <% #else %>
+                  <%= #check_box_tag "notifications_enabled", "off", false %>
+                  <%# end %>
                   <span class="lever"></span>
                   On
                 </label>
