--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -121,6 +121,7 @@ strong {
 // Site Footer
 
 .page-footer {
+  z-index: 9999;
   width: 100%;
   background-color: #525252;
   box-shadow: 0 0 3px #444;
