--- a/app/views/dashboard/assign_task.html.erb
+++ b/app/views/dashboard/assign_task.html.erb
@@ -1,4 +1,5 @@
 <main>
+  <%= render "partials/sidebar_dashboard" %>
   <div class="row">
     <h3 class="center-align">Assign Task</h3>
       <div class= "col s8 offset-s2" >
