--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -8,43 +8,36 @@
 <% if current_user.confirmed %>
 
 <main>
+<%= render "partials/sidebar_dashboard" %>
   <section class="main container center-align">
 
-    <nav>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#!">First Sidebar Link</a></li>
-        <li><a href="#!">Second Sidebar Link</a></li>
-      </ul>
-      <ul id="slide-out" class="side-nav">
-        <li><a href="#!">First Sidebar Link</a></li>
-        <li><a href="#!">Second Sidebar Link</a></li>
-      </ul>
-      <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-    </nav>
+
     <div class="row">
       <section class="col s12">
         <div class="user_info">
           <h3>Welcome <%= "#{current_user.firstname} #{current_user.lastname}" %> </h3>
+          <%= render "partials/search_for_taskee" if current_user.user_type == "tasker" %>
             <h5>enable mail notifications</h5>
             <%= form_tag user_settings_path do %>
                   <div class="switch" style="padding: 2em;">
                 <label>
                   Off
-                  <% # if current_user.enable_notifications %>
-                  <%= #check_box_tag "notifications_enabled", "on", true %>
-                  <% #else %>
-                  <%= #check_box_tag "notifications_enabled", "off", false %>
-                  <%# end %>
+                  <%  if current_user.enable_notifications %>
+                  <%= check_box_tag "notifications_enabled", "on", true %>
+                  <% else %>
+                  <%= check_box_tag "notifications_enabled", "off", false %>
+                  <% end %>
                   <span class="lever"></span>
                   On
                 </label>
               </div>
             <button id='notification' class="waves-effect waves-light btn"> save </button>
-          </div>
             <% end %>
-
-          <%= render "partials/search_for_taskee" if current_user.user_type == "tasker" %>
         </div>
+        </div>
+
+
+
       </section>
     </div>
   </section>
