--- a/app/views/dashboard/user_profile.html.erb
+++ b/app/views/dashboard/user_profile.html.erb
@@ -1,14 +1,5 @@
 <main>
-  <div class="sidebar-dash">
-    <ul>
-      <li class="side-nav-button"><%= link_to "Home", dashboard_path  %></li><hr>
-      <li class="side-nav-button"><%= link_to "Profile Settings", profile_path  %></li><hr>
-      <li class="side-nav-button"><%= link_to "Task Management", profile_path  %></li><hr>
-      <li class="side-nav-button"><%= link_to "Account Upgrade", profile_path  %></li><hr>
-      <li class="side-nav-button"><%= link_to "Map Search", profile_path  %></li><hr>
-      <li></li>
-    </ul>
-  </div>
+<%= render "partials/sidebar_dashboard" %>
   <section class="main container center-align">
   <section class="col m9 s12 offset-m1">
     <div class="row">
